[package]
name = "indra-rs"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"
keywords = ["indracore", "substrate"]

[dependencies]
indracore-subxt = { version = "0.1.0", package = "indracore-subxt", path = "indracore-subxt" }
async-std = { version = "1.9.0", features = ["attributes"] }

[profile.release]
panic = "unwind"