[package]
name = "indra-rs"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[[bin]]
name = "indra-js"
path = "src/main.rs"


[dependencies]
substrate-subxt = { package = "substrate-subxt", path = "../substrate-subxt" }
sp-keyring = "3.0.0"
async-std = { version = "1.9.0", features = ["attributes"] }