[package]
name = "indracore-subxt"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/selendra/indra-rs"
homepage = "https://selendra.org"
description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["selendra", "substrate", "blockchain", "indracore"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = []
# client = ["indra-client"]

[dependencies]
url = "2.2.0"
hex = "0.4.2"
log = "0.4.13"
thiserror = "1.0.23"
futures = "0.3.10"
jsonrpsee = { version = "0.1.0", features = ["ws"] }
num-traits = { version = "0.2.14", default-features = false }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive", "full"] }

frame-metadata = { git = "https://github.com/selendra/substrate.git", branch = "v2.0.2" }
frame-support = { git = "https://github.com/selendra/substrate.git", branch = "v2.0.2" }
application-crypto = { git = "https://github.com/selendra/substrate.git", branch = "v2.0.2", package = "sp-application-crypto" }
pallet-indices = { git = "https://github.com/selendra/substrate.git", branch = "v2.0.2" }
pallet-staking = { git = "https://github.com/selendra/substrate.git", branch = "v2.0.2" }

sp-runtime = { git = "https://github.com/selendra/substrate.git", branch = "v2.0.2" }
sp-version = { git = "https://github.com/selendra/substrate.git", branch = "v2.0.2" }
sp-std = { git = "https://github.com/selendra/substrate.git", branch = "v2.0.2" }
sp-rpc = { git = "https://github.com/selendra/substrate.git", branch = "v2.0.2", package = "sp-rpc" }
sp-core = { git = "https://github.com/selendra/substrate.git", branch = "v2.0.2", package = "sp-core" }

# indra-client = { version = "0.1.0", path = "client", optional = true }
indra-proc-macro = { version = "0.1.0", path = "proc-macro" }