[package]
name = "indra-client"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

license = "GPL-3.0"
repository = "https://github.com/selendra/indra-rs"
homepage = "https://selendra.org"
description = "Embed a substrate node into your subxt application."
keywords = ["selendra", "substrate", "blockchain", "indracore"]

[dependencies]
async-std = "1.8.0"
futures = { version = "0.3.9", features = ["compat"], package = "futures" }
futures01 = { package = "futures", version = "0.1.29" }
jsonrpsee = "0.1.0"
log = "0.4.13"
thiserror = "1.0.23"
serde_json = "1.0.61"

sc-network = { git = "https://github.com/selendra/substrate.git", branch = "v2.0.2", default-features = false }
sc-service = { git = "https://github.com/selendra/substrate.git", branch = "v2.0.2", default-features = false }
sp-keyring = { git = "https://github.com/selendra/substrate.git", branch = "v2.0.2" }
