
[package]
name = "indra-proc-macro"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"
autotests = false

license = "GPL-3.0"
repository = "https://github.com/selendra/indra-rs"
homepage = "https://selendra.org"
description = "Derive calls, events, storage and tests for interacting Substrate modules with substrate-subxt"

[lib]
proc-macro = true

[dependencies]
heck = "0.3.2"
proc-macro2 = "1.0.24"
proc-macro-crate = "0.1.5"
proc-macro-error = "1.0.4"
quote = "1.0.8"
syn = { version = "1.0.58", features = ["full", "extra-traits"] }
synstructure = "0.12.4"